--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,15 +59,11 @@
   .toolbar #twitter-logo:hover {
     opacity: 0.8;
   }
-
-  .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  }
+        }else{
+          indicator.style.display = "none";
+          text.style.display = "none";
+          showBtn.style.display = "none";
+        }
 
   svg.material-icons {
     height: 24px;
